[Sensors] Clear reading cache after all the sensor instances are stopped

Otherwise a sensor object when it starts again can report an outdated reading.

Bug: 778201
Change-Id: I7df365099e06e5fe92e708d049e6c81443f02d96
Reviewed-on: https://chromium-review.googlesource.com/738174
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Reviewed-by: Alexander Shalamov <alexander.shalamov@intel.com>
Commit-Queue: Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com>
Cr-Commit-Position: refs/heads/master@{#511838}
Former-commit-id: 8678634068c94d355e5e9357ba339f6559c01acf